--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -309,25 +309,26 @@
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
                 <h2 class="blue-text">Yhteistyö&shy;kumppanit 2024</h2>
                 <div class="imgcontainer">
-                    <img src="images/sponsors/Tuiteri.png" class="companyLogo" alt="Bar Tuiteri"/>
-                    <img src="images/sponsors/Muurmanni.png" class="companyLogo" alt="Muurmanni"/>
-                    <img src="images/sponsors/Juoma.png" class="companyLogo" alt="Pub Juoma"/>
-                    <img src="images/sponsors/Teerenpeli.png" class="companyLogo" alt="Teerenpeli"/>
-                    <img src="images/sponsors/Melbourne.png" class="companyLogo" alt="Melbourne"/>
-                    <img src="images/sponsors/Pääkonttori.png" class="companyLogo" alt="Pub Pääkonttori"/>
-                    <img src="images/sponsors/UrkanBaari.png" class="companyLogo" alt="Urkan Baari"/>
-                    <img src="images/sponsors/Cheers.png" class="companyLogo" alt="Cheers"/>
-                    <!-- Myllykki -->
-                    <img src="images/sponsors/Unelma.png" class="companyLogo" alt="Unelma"/>
-                    <img src="images/sponsors/Kierre.png" class="companyLogo" alt="Pub Kierre"/>
-                    <img src="images/sponsors/Kyläbaari.png" class="companyLogo" alt="Meidän Kyläbaari"/>
-                    <img src="images/sponsors/Kaskitupa.png" class="companyLogo" alt="Pub Kaskitupa"/>
-                    <img src="images/sponsors/Hiisi.png" class="companyLogo" alt="Hiisi"/>
-                    <img src="images/sponsors/Vemmelsääri.png" class="companyLogo" alt="Vemmelsääri"/>
-                    <!-- Vihtahousu -->
-                    <img src="images/sponsors/Sherwood.png" class="companyLogo" alt="Sherwood"/>
-                    <img src="images/sponsors/Tuiske.png" class="companyLogo" alt="Bar Tuiske"/>
-                    <!-- London -->
+                    <img src="/images/sponsors/Tuiteri.png" class="companyLogo" alt="Bar Tuiteri"/>
+                    <img src="/images/sponsors/Muurmanni.png" class="companyLogo" alt="Muurmanni"/>
+                    <img src="/images/sponsors/Juoma.png" class="companyLogo" alt="Pub Juoma"/>
+                    <img src="/images/sponsors/Teerenpeli.png" class="companyLogo" alt="Teerenpeli"/>
+                    <img src="/images/sponsors/Melbourne.png" class="companyLogo" alt="Melbourne"/>
+                    <img src="/images/sponsors/Pääkonttori.png" class="companyLogo" alt="Pub Pääkonttori"/>
+                    <img src="/images/sponsors/UrkanBaari.png" class="companyLogo" alt="Urkan Baari"/>
+                    <img src="/images/sponsors/Cheers.png" class="companyLogo" alt="Cheers"/>
+                    <img src="/images/sponsors/Myllykki.png" class="companyLogo" alt="Myllykki"/>
+                    <img src="/images/sponsors/Unelma.png" class="companyLogo" alt="Unelma"/>
+                    <img src="/images/sponsors/Kierre.png" class="companyLogo" alt="Pub Kierre"/>
+                    <img src="/images/sponsors/Kyläbaari.png" class="companyLogo" alt="Meidän Kyläbaari"/>
+                    <img src="/images/sponsors/Kaskitupa.png" class="companyLogo" alt="Pub Kaskitupa"/>
+                    <img src="/images/sponsors/Hiisi.png" class="companyLogo" alt="Hiisi"/>
+                    <img src="/images/sponsors/Vemmelsääri.png" class="companyLogo" alt="Vemmelsääri"/>
+                    <img src="/images/sponsors/Vihtahousu.png" class="companyLogo" alt="Vihtahousu"/>
+                    <img src="/images/sponsors/Sherwood.png" class="companyLogo" alt="Sherwood"/>
+                    <img src="/images/sponsors/Tuiske.png" class="companyLogo" alt="Bar Tuiske"/>
+                    <img src="/images/sponsors/London.svg" class="companyLogo" alt="London"/>
+                    <img src="/images/sponsors/Ticketless.svg" class="companyLogo" alt="Ticketless"/>
                 </div>
             </div>
         </div>
