--- a/www/index.html
+++ b/www/index.html
@@ -298,6 +298,7 @@
                     <img src="/images/sponsors/Tuiske.png" class="companyLogo" alt="Bar Tuiske"/>
                     <img src="/images/sponsors/London.svg" class="companyLogo" alt="London"/>
                     <img src="/images/sponsors/Ticketless.svg" class="companyLogo" alt="Ticketless"/>
+                    <img src="/images/sponsors/Tek.png" class="companyLogo" alt="TEK"/>
                 </div>
             </div>
         </div>
