Add language chooser

--- a/www/index.html
+++ b/www/index.html
@@ -76,6 +76,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/laulut" data-t>section.songs.title</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" data-attr-t href-t="nav.change-language-link" data-t>nav.change-language-text</a>
+                </li>
             </ul>
         </div>
     </div>
