--- a/www/index.html
+++ b/www/index.html
@@ -117,12 +117,12 @@
                         data-t="section.info.to-sales"
                     ></a>
                 </p>
-                <p data-t>section.info.thanks</p>
-                <p data-t hidden>section.info.secondary-market</p>
-                <p data-t hidden>section.info.p1</p>
+                <p data-t hidden>section.info.thanks</p>
+                <p data-t>section.info.secondary-market</p>
+                <p data-t>section.info.p1</p>
                 <br>
                 <p data-t>section.info.follow</p>
-                <p data-t hidden>section.info.p2</p>
+                <p data-t>section.info.p2</p>
             </div>
         </div>
     </div>
@@ -163,7 +163,7 @@
     </div>
 </section>
 
-<section id="lipunmyynti" class="white-section" hidden>
+<section id="lipunmyynti" class="white-section">
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto text-align-center"><h2 class="orange-text" data-t>section.tickets.title</h2>
@@ -179,7 +179,7 @@
     </div>
 </section>
 
-<section id="jatkot" class="grey-section" hidden>
+<section id="jatkot" class="grey-section">
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
@@ -412,7 +412,7 @@
 <!-- countdown JS-->
 <script>
   // Set the date we're counting down to
-  var countDownDate = new Date("April 25, 2024 16:00:00").getTime();
+  var countDownDate = new Date("April 24, 2025 16:00:00").getTime();
 
   // Update the countdown every 1 second
   var x = setInterval(function () {
