Coming soon update

--- a/www/index.html
+++ b/www/index.html
@@ -56,22 +56,22 @@
                     <a class="nav-link js-scroll-trigger" href="#matkanjohtajahaku" data-t>section.guide-application.title</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#mita" data-t>section.what.title</a>
+                    <a class="nav-link js-scroll-trigger" href="#mita" data-t hidden>section.what.title</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#lipunmyynti" data-t>section.tickets.title</a>
+                    <a class="nav-link js-scroll-trigger" href="#lipunmyynti" data-t hidden>section.tickets.title</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#jatkot" data-t>section.afterparty.title</a>
+                    <a class="nav-link js-scroll-trigger" href="#jatkot" data-t hidden>section.afterparty.title</a>
                 </li>
                 <li class="nav-item" hidden>
-                    <a class="nav-link js-scroll-trigger" href="#lipunmyynti_vaihto_info" data-t>section.ticket-exchange.title</a>
+                    <a class="nav-link js-scroll-trigger" href="#lipunmyynti_vaihto_info" data-t hidden>section.ticket-exchange.title</a>
 		        </li>
                 <li class="nav-item" hidden>
-                    <a class="nav-link js-scroll-trigger" href="#aikataulu" data-t>section.timetable.title</a>
+                    <a class="nav-link js-scroll-trigger" href="#aikataulu" data-t hidden>section.timetable.title</a>
 		        </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#baarit" data-t>section.partners.menu-title</a>
+                    <a class="nav-link js-scroll-trigger" href="#baarit" data-t hidden>section.partners.menu-title</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/laulut" data-t>section.songs.title</a>
@@ -101,12 +101,12 @@
 <section id="info" class="white-section">
     <div class="container">
         <div class="row row-custom">
-            <div class="col-lg-8 col-md-6 col-sm 4 mx-auto" hidden>
+            <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
                 <h1 class="blue-text" data-t>event.name-with-year</h1>
                 <br>
                 <h4 data-t>section.info.coming-soon</h4>
             </div>
-            <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
+            <div class="col-lg-8 col-md-6 col-sm 4 mx-auto" hidden>
                 <h1 class="blue-text" data-t>event.name-with-year</h1>
                 <br>
                 <p>
@@ -117,7 +117,7 @@
                         data-t="section.info.to-sales"
                     ></a>
                 </p>
-                <p data-t hidden>section.info.thanks</p>
+                <p data-t>section.info.thanks</p>
                 <p data-t>section.info.secondary-market</p>
                 <p data-t>section.info.p1</p>
                 <br>
@@ -128,7 +128,7 @@
     </div>
 </section>
 
-<section id="mita" class="grey-section">
+<section id="mita" class="grey-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
@@ -163,7 +163,7 @@
     </div>
 </section>
 
-<section id="lipunmyynti" class="white-section">
+<section id="lipunmyynti" class="white-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto text-align-center"><h2 class="orange-text" data-t>section.tickets.title</h2>
@@ -179,7 +179,7 @@
     </div>
 </section>
 
-<section id="jatkot" class="grey-section">
+<section id="jatkot" class="grey-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
@@ -276,7 +276,7 @@
     </div>
 </section>
 
-<section id="baarit" class="white-section">
+<section id="baarit" class="white-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
@@ -387,7 +387,7 @@
         <div id="somet">
             <a href="https://www.facebook.com/jyvasmetro/" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/jyvasmetro/" class="fa fa-instagram"></a>
-	        <a href="https://t.me/jyvasmetro2024" class="fa fa-telegram"></a>
+	        <a href="https://t.me/jyvasmetro2024" class="fa fa-telegram" hidden></a>
         </div>
     </div>
     <!-- /.container -->
